# image-scoring

./: .gitmodules  CLIP.ipynb  CORnet.ipynb  LICENSE  README  pyproject.toml  vis.R
data/: blurlevels.csv  clip_full.csv  clip_scores.csv  clip_scores1854_all.csv  clip_scores1854_all_noblur.csv  clip_scores320.csv  clip_scores320_all.csv  clip_scores320_all_noblur.csv  clip_scores_window.csv  entropy_scores.csv  things320.csv
