[project]
name = "cornet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "fire>=0.7.1",
    "ftfy>=6.3.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "regex>=2026.4.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
